<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">文件传输</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_password">设置密码</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_find_password">找回密码</string>
    <string name="title_activity_main">主页</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">设置</string>
    <string name="action_refresh">刷新</string>
    <string name="action_add_friend">添加好友</string>
    <string name="title_activity_add_friend">添加好友</string>
    <string name="email_address">对方邮箱地址</string>
    <string name="greeting">认证信息</string>
    <string name="send_invitation">发送请求</string>
    <string name="friend_request">好友请求</string>
    <string name="accept">接受</string>
    <string name="reject">拒绝</string>
    <string name="processing">进行中</string>
    <string name="pause">暂停</string>
    <string name="send_file">发文件</string>
    <string name="delete_friend">删除好友</string>
    <string name="email">邮箱地址</string>

</resources>
