<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/email_address"
            android:id="@+id/email_address"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/app_name"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/progress_item_filename"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:textSize="16sp"
        android:hint="@string/processing"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ProgressBar
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_item_progress"/>

</LinearLayout>
