<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friend_request"
                android:textSize="15sp"
                android:width="170dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="from zhangqichen1@163.com:"
                android:id="@+id/email_address"
                android:textSize="15sp"
                android:width="170dp"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/message_list_item_btn_accept"
            android:text="@string/accept"
            style="?android:buttonBarButtonStyle"
            android:textSize="20sp"
            android:gravity="center"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/message_list_item_btn_reject"
            style="?android:buttonBarButtonStyle"
            android:text="@string/reject"
            android:textSize="20sp"
            android:gravity="center"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/message_list_item_tv_greeting"
        android:hint="Hello"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

